<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seeker_welcome">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/uname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="169dp"
        android:text="@string/login"
        android:onClick="login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="127dp"
            android:text="@string/reg"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView"
            android:layout_marginEnd="121dp"
            android:clickable="true"
            android:onClick="regredir"
            android:text="@string/regredir"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>